--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,15 +3,11 @@ set -g prefix C-a
 
 # bind 'C-a C-a' to type 'C-a'
 bind C-a send-prefix
-unbind C-b
 
 # true colour support
 set -g default-terminal "st-256color"
 set -ga terminal-overrides ",st*:Tc"
 set -s escape-time 0
-
-# vim keybinds 
-# set mode-keys vi
 
 # needed for nvim
 set-option -g focus-events on
@@ -19,9 +15,17 @@ set-option -g focus-events on
 # mouse mode
 set -g mouse on
 
-# Set 'v' for vertical and 'h' for horizontal split
+# Set 'v' for vertical and 'b' for horizontal split
 bind v split-window -h -c '#{pane_current_path}'
 bind b split-window -v -c '#{pane_current_path}'
+
+# copy-mode tweaks
+bind -T copy-mode-vi MouseDown1Pane select-pane \;\
+  send-keys -X copy-pipe "pbcopy" \;\
+  send-keys -X clear-selection
+
+bind p paste-buffer
+bind C-p choose-buffer
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -55,7 +59,9 @@ bind -r C-l resize-pane -R
 ############################################################################
 # Unbindings
 ############################################################################
-# remove default binding since replacing
+
+unbind C-b
+
 unbind %
 unbind Up
 unbind Down
@@ -66,3 +72,5 @@ unbind C-Up
 unbind C-Down
 unbind C-Left
 unbind C-Right
+
+unbind -T copy-mode-vi MouseDragEnd1Pane
