remove config defaults, add ftplugin for jscript

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,7 +5,7 @@ set -g prefix C-a
 bind C-a send-prefix
 
 # true colour support
-set -g default-terminal "st-256color"
+set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",st*:Tc"
 set -s escape-time 0
 
