fix global zsh config being sourced in tmux, add emmet plugin, include zshrc in dots repo

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,3 +1,6 @@
+# prevent global zsh config being sourced
+set -g default-command '/bin/zsh -d'
+
 # remap prefix to Control + a
 set -g prefix C-a
 
