fix vim colorscheme, setup coc globals

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -9,7 +9,7 @@ bind C-a send-prefix
 
 # true colour support
 set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",st*:Tc"
+set -ga terminal-overrides ",*256color*:Tc"
 set -s escape-time 0
 
 # needed for nvim
