--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,3 +1,4 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "javascript"]
+  "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "javascript", "json"],
+  "coc.preferences.jumpCommand": "vsplit"
 }
