--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,4 +1,12 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "javascript", "json"],
-  "coc.preferences.jumpCommand": "vsplit"
+  "coc.preferences.formatOnSaveFiletypes": [
+    "css",
+    "markdown",
+    "javascript",
+    "json",
+    "typescript",
+    "typescriptreact"
+  ],
+  "coc.preferences.jumpCommand": "vsplit",
+  "javascript.suggestionActions.enabled": false
 }
